--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
        <section class="banner">
            <div class="content-banner">
                <p>FRAGOLE</p>
-               <h2>Acero Inoxidable<br /> y chapados en oro</h2>
+               <h2>Acero Inoxidable </h2>
                <a href="#" onclick="showAllProducts()">Comprar ahora</a>
            </div>
        </section>
