Cambio titulo html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
        <section class="banner">
            <div class="content-banner">
                <p>FRAGOLE</p>
-               <h2>Joyas de Acero Inoxidable</h2> <h2>Chapados en oro y Laminados</h2>
+               <h2>Joyas de Acero Inoxidable</h2> <h2>Chapados en oro</h2>
                <a href="#" onclick="showAllProducts()">Comprar ahora</a>
            </div>
        </section>
