Cambio en texto y imagen

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                    <h3>Redes Sociales</h3>
                    <ul>
                        <li><a href="#sobre-nosotros" onclick="showHome(); setTimeout(()=>document.getElementById('sobre-nosotros').scrollIntoView({behavior:'smooth'}), 0)">Acerca de Nosotros</a></li>
-                       <li><a href="#">instagram: Fragolr_sc</a></li>
+                       <li><a href="#">instagram: Fragole_sc</a></li>
                        <li><a href="#">Facebook: Fragole Santa Cruz</a></li>
                        <li><a href="#">tik tok: @fragole50 </a></li>
                        <li><a href="#">WhatsApp: 63318978</a></li>
@@ -266,7 +266,7 @@
            </div>
            
            <div class="copyright">
-               <p>&copy; 2024 FRAGOLE. Todos los derechos reservados.</p>
+               <p>&copy; 2025 FRAGOLE. Todos los derechos reservados.</p>
            </div>
        </div>
    </footer>
