--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                <div>
                    <h3>Información de Contacto</h3>
                    <ul>
-                       <li>Dirección: Somos una tienda Online</li>
+                       <li>Somos una tienda Online</li>
                        <li>Teléfono: 63318978</li>
                        <li>También contáctate al: 63318978</li>
                        <li>Email: cnotaci@gmail.com</li>
