--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
        <section class="banner">
            <div class="content-banner">
                <p>FRAGOLE</p>
-               <h2>Joyas Acero Inoxidable</h2> <h2>Chapados en oro</h2>
+               <h2>Acero Inoxidable<br /> y chapados en oro</h2>
                <a href="#" onclick="showAllProducts()">Comprar ahora</a>
            </div>
        </section>
@@ -239,7 +239,7 @@
                <div>
                    <h3>Información de Contacto</h3>
                    <ul>
-                       <li>Dirección: Somos una tienda Online</li>
+                       <li> Somos una tienda Online</li>
                        <li>Teléfono: 63318978</li>
                        <li>También contáctate al: 63318978</li>
                        <li>Email: cnotaci@gmail.com</li>
@@ -266,7 +266,7 @@
            </div>
            
            <div class="copyright">
-               <p>&copy; 2025 FRAGOLE. Todos los derechos reservados.</p>
+               <p>&copy; 2024 FRAGOLE. Todos los derechos reservados.</p>
            </div>
        </div>
    </footer>
